src/main/java/com/example/credit_service_project/service/errors/exceptions/EmptyListException.java
package com.example.credit_service_project.service.errors.exceptions;

public class EmptyListException extends RuntimeException{
    public EmptyListException(String message) {
        super(message);
    }
}
